@@ -1,3 +1,9 @@
+2011-07-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-64
+	* Add "Copy Sequence" option (bug/feature 75955).
+	* Add "Copy Path" option (bug/feature 75955).
+	* Add "Enable Path cloning" under "Options" menu. (bug/feature 75955).
+	
 2011-07-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-63 
 	* Set empty scalar assignment to "None" in Python converter. bug 84064
